# UAV_MOT

./: .gitignore  CMakeLists.txt  README.md
src/: FairMOT.cpp  detection.cpp  detection.h
